--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "digital-web-solutions",
+  "name": "vehicle_insurance",
   "version": "0.1.0",
   "private": true,
+  "author": "patDev",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -9,16 +10,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/cache": "^11.11.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.5",
+    "@mui/material-nextjs": "^5.15.5",
+    "next": "14.0.4",
     "react": "^18",
+    "react-countup": "^6.5.0",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "react-icons": "^5.0.1",
+    "react-scroll-trigger": "^0.6.14",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "eslint-config-next": "14.0.4",
+    "typescript": "^5"
   }
 }
